--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:qkXF6ldrxvVlvuQaMGhGW7hNv73qBstBt6jm/HCN9Eo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel_7
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -36,6 +36,8 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
+
+FILESYSTEM_DRIVER=public
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
